--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,214 @@
-.App {
-  text-align: center;
+/*
+font-family: 'Montserrat', sans-serif;
+font-family: 'Yellowtail', cursive;
+*/
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-size: 100%;
+  font-family: "Lato";
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  background-image: linear-gradient(to right, #6a85b6, #bac8e0);
+}
+
+.sec0 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  background-image: linear-gradient(to right, #6a85b6, #bac8e0);
+  color: #fff;
+  font-family: "Lobster", sans-serif;
+  margin-top: -37px;
+}
+
+.sec0__cta {
+  box-shadow: 0px 0px 6px 1px #6a85b6;
+  border: 1px solid #bac8e0;
+  border-radius: 5px;
+  padding: 1rem 3rem;
+  color: #fff;
+  animation: welcomecta 2s infinite;
+}
+
+.sec0__cta:hover {
+  font-weight: bolder;
+  color: #fff;
+}
+
+.sec0__header > h1 {
+  font-size: 4rem;
+}
+.sec0__header > h2 {
+  font-size: 3rem;
+}
+
+@keyframes welcomecta {
+  from {
+    border-color: #bac8e0;
+  }
+  to {
+    border-color: #6a85b6;
+  }
+}
+
+.sec1__header {
+  padding: 4rem 0;
+}
+
+.sec1__header > h2,
+.sec2__header > h2,
+.sec3__header > h2 {
+  position: relative;
+  display: inline-block;
+  font-family: "Lobster";
+}
+
+.sec1__header > h2::after,
+.sec2__header > h2::after,
+.sec3__header > h2::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 0.4rem;
+  left: 0;
+  bottom: -5px;
+  background-color: #6a85b6;
+}
+
+.sec1__header > h2::before,
+.sec2__header > h2::before,
+.sec3__header > h2::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 0.4rem;
+  right: 0;
+  top: -5px;
+  background-color: #6a85b6;
+}
+/* section two */
+
+.sec2__header {
+  padding: 4rem 0;
+}
+
+.sec2__card {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.sec2__card-div {
+  position: relative;
+  width: 26rem;
+  margin: 1rem;
+  box-shadow: 0px 0px 10px 0px #6a85b6;
+}
+
+.sec2__card-div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #6a85b6;
+  opacity: 0;
+  transition: opacity 250ms;
+}
+
+.sec2__card-div:hover::before {
+  opacity: 0.9;
+}
+
+.sec2__card-div img {
+  width: 100%;
+  height: auto;
+}
+
+.sec2__card-div-overlay {
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  padding: 1rem;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: opacity 500ms;
 }
 
-.App-link {
-  color: #61dafb;
+.sec2__card-div-overlay > h4 {
+  font-family: "Lobster";
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.sec2__card-div:hover .sec2__card-div-overlay {
+  opacity: 1;
+}
+
+/* section three */
+
+.sec3__header {
+  padding: 4rem 0;
+}
+
+/* overriding bootstrap */
+
+.card {
+  border-color: none;
+  border-radius: 0;
+}
+
+.card-title {
+  color: #6a85b6;
+}
+
+.code__logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.code__logo > span {
+  font-size: 4rem;
+}
+
+@media only screen and (max-width: 960px) {
+  body {
+    font-size: 90%;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+  .lead {
+    font-size: 1.1rem;
+  }
+  .col-sm-12 {
+    margin: 15px 0px;
+  }
+  .code_logo > span {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .code__logo {
+    justify-content: start;
+    flex-wrap: wrap;
   }
 }
