--- a/src/App.css
+++ b/src/App.css
@@ -189,11 +189,11 @@ nav {
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
   .lead {
     font-size: 1.1rem;
