--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,28 @@ font-family: 'Yellowtail', cursive;
   box-sizing: border-box;
 }
 
+.l-height {
+  line-height: 2.5rem;
+}
+
 body {
   font-size: 100%;
-  font-family: "Lato";
+  font-family: "Montserrat", sans-serif;
 }
 
 nav {
   background-image: linear-gradient(to right, #6a85b6, #bac8e0);
+}
+
+.nav-link {
+  font-size: 1.25rem;
+  color: #ebedee;
+}
+
+.is-current {
+  background-color: #007bff;
+  border-radius: 2px;
+  color: #fdfbfb;
 }
 
 .sec0 {
@@ -42,9 +57,15 @@ nav {
   color: #fff;
 }
 
+.sec_header {
+  color: #ebedee;
+}
+
 .sec0__header > h1 {
   font-size: 4rem;
+  color: #fdfbfb;
 }
+
 .sec0__header > h2 {
   font-size: 3rem;
 }
@@ -188,6 +209,10 @@ nav {
 }
 
 @media only screen and (max-width: 960px) {
+  .nav-link {
+    font-size: 1rem;
+  }
+
   body {
     font-size: 90%;
   }
