--- a/src/App.css
+++ b/src/App.css
@@ -17,18 +17,22 @@ body {
 }
 
 nav {
-  background-image: linear-gradient(to right, #6a85b6, #bac8e0);
+  background-image: linear-gradient(to right, #005bea, #00c6fb);
 }
 
-.nav-link {
+.nav-item {
   font-size: 1.25rem;
   color: #ebedee;
 }
 
 .is-current {
-  background-color: #007bff;
+  background-color: #fdfbfb;
   border-radius: 2px;
-  color: #fdfbfb;
+  color: #005bea;
+}
+
+.nav-link {
+  color: inherit;
 }
 
 .sec0 {
@@ -37,7 +41,7 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   height: 100vh;
-  background-image: linear-gradient(to right, #6a85b6, #bac8e0);
+  background-image: linear-gradient(to right, #005bea, #00c6fb);
   color: #fff;
   font-family: "Lobster", sans-serif;
   margin-top: -37px;
@@ -210,7 +214,7 @@ nav {
 
 @media only screen and (max-width: 960px) {
   .nav-link {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 
   body {
