--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ nav {
   background-image: linear-gradient(to right, #005bea, #00c6fb);
   color: #fff;
   font-family: "Lobster", sans-serif;
-  margin-top: -37px;
+  margin-top: -46px;
 }
 
 .sec0__cta {
@@ -230,6 +230,9 @@ nav {
   }
   .lead {
     font-size: 1.1rem;
+  }
+  .fa-laptop-code {
+    font-size: 5rem;
   }
   .col-sm-12 {
     margin: 15px 0px;
